# cutter

./: .gitignore  .travis.yml  Brewfile  ChangeLog  Comparison_with_GTester  FEATURES  FEATURES.ja  Gemfile  Makefile.am  Makefile.win32  NEWS  NEWS.ja  NEWS.md  README  README.en  README.ja  Rakefile  TODO  TUTORIAL  TUTORIAL.ja  Tutorial.ja  USERS  USERS.ja  autogen.sh  bootstrap  configure.ac  cppcutter.pc.in  cutter++.pc.in  cutter.pc.in  gcutter.pc.in  gdkcutter-pixbuf.pc.in  gpg_uid  gpg_uid_rsa4096  gtk-doc.make  libcutter.pc.in  soupcutter.pc.in
apt/: Makefile  Makefile.am  build-deb.sh  build-in-chroot.sh  sign-repository.sh  update-repository.sh
cppcutter/: Makefile.am  Makefile.win32  cppcut-assertions-helper.cpp  cppcut-assertions-helper.h  cppcut-assertions.h  cppcut-iterated-test.cpp  cppcut-iterated-test.h  cppcut-macros.h  cppcut-message.cpp  cppcut-message.h  cppcut-test-invoke.cpp  cppcut-test-invoke.h  cppcut-test-iterator.cpp  cppcut-test-iterator.h  cppcut-test-methods.cpp  cppcut-test-methods.h  cppcut-test.cpp  cppcut-test.h  cppcutter.h
cutter/: .gitignore  Makefile.am  Makefile.win32  assersions.h  compile.c  compile.h  cut-analyzer.c  cut-analyzer.h  cut-assertion.h  cut-assertions-helper.c  cut-assertions-helper.h  cut-assertions.h  cut-backtrace-entry.c  cut-backtrace-entry.h  cut-colorize-differ.c  cut-colorize-differ.h  cut-console-color-diff-writer.c  cut-console-color-diff-writer.h  cut-console-colors.h  cut-console-diff-writer.c  cut-console-diff-writer.h  cut-console.c  cut-console.h  cut-context-private.h  cut-context.c  cut-context.h  cut-contractor.c  cut-contractor.h  cut-crash-backtrace.c  cut-crash-backtrace.h  cut-declare-helper.h  cut-diff-writer.c  cut-diff-writer.h  cut-diff.c  cut-diff.h  cut-differ-colorize.c  cut-differ-colorize.h  cut-differ-readable.c  cut-differ-readable.h  cut-differ.c  (+157 more)
cutter++/: Makefile.am  cut++-assertions-helper.h  cut++-assertions.h  cutter++.h
doc/: Makefile.am  cut-diff.rd  cut-diff.rd.ja  cutter.rd  cutter.rd.ja  install-to-centos.rd  install-to-centos.rd.ja  install-to-cygwin.rd  install-to-cygwin.rd.ja  install-to-debian.rd  install-to-debian.rd.ja  install-to-fedora.rd  install-to-fedora.rd.ja  install-to-freebsd.rd  install-to-freebsd.rd.ja  install-to-mac-os-x.rd  install-to-mac-os-x.rd.ja  install-to-macos.rd  install-to-macos.rd.ja  install-to-others.rd  install-to-others.rd.ja  install-to-solaris.rd  install-to-solaris.rd.ja  install-to-ubuntu.rd  install-to-ubuntu.rd.ja  release.rd.ja  sample_log.xml  travis-ci-integration.rd  travis-ci-integration.rd.ja
gcutter/: .gitignore  Makefile.am  Makefile.win32  gcut-assertions-helper.c  gcut-assertions-helper.h  gcut-assertions.h  gcut-data-helper.c  gcut-data-helper.h  gcut-data.c  gcut-data.h  gcut-dynamic-data.c  gcut-dynamic-data.h  gcut-egg.c  gcut-egg.h  gcut-enum.c  gcut-enum.h  gcut-error.c  gcut-error.h  gcut-event-loop.c  gcut-event-loop.h  gcut-glib-event-loop.c  gcut-glib-event-loop.h  gcut-hash-table.c  gcut-hash-table.h  gcut-hash.c  gcut-hash.h  gcut-inspect.c  gcut-inspect.h  gcut-io-channel-string.c  gcut-io-channel-string.h  gcut-io.c  gcut-io.h  gcut-key-file.c  gcut-key-file.h  gcut-list.c  gcut-list.h  gcut-main.c  gcut-main.h  gcut-marshalers.list  gcut-object.c  (+17 more)
gdkcutter-pixbuf/: Makefile.am  gdkcut-pixbuf-assertions-helper.c  gdkcut-pixbuf-assertions-helper.h  gdkcut-pixbuf-assertions.h  gdkcut-pixbuf.c  gdkcut-pixbuf.h  gdkcutter-pixbuf.h
glib-compatible/: Makefile.am  config.h  galias.h  glib-compatible.c  glib-compatible.h  gregex.c  gsequence.c  gstring.c  gstring.h  gunicode.h  guniprop.c
gst-plugins/: Makefile.am  cut-gst-run-context.c  cut-gst-run-context.h  gst-cutter-console-output.c  gst-cutter-console-output.h  gst-cutter-server.c  gst-cutter-server.h  gst-cutter-src.c  gst-cutter-test-runner.c  gst-cutter-test-runner.h  gst-cutter-test-viewer.c  gst-cutter-test-viewer.h  gst-cutter-test.c  gst-cutter.c  run-client.sh  run-server.sh  run-test.sh
html/: .htaccess  Makefile.am  cutter.css  index.html  index.html.ja
sample/: Makefile.am
soupcutter/: Makefile.am  soupcut-assertions-helper.c  soupcut-assertions-helper.h  soupcut-assertions.h  soupcut-client.c  soupcut-client.h  soupcut-server.c  soupcut-server.h  soupcutter.h
test/: Makefile.am  Makefile.win32  cuttest-assertions.h  cuttest-utils.c  cuttest-utils.h  dummy_test_functions.c  run-test.bat  run-test.sh  test-cut-assertion.c  test-cut-assertions.c  test-cut-contractor.c  test-cut-diff.c  test-cut-factory-builder.c  test-cut-file-stream-reader.c  test-cut-fixture-data.c  test-cut-fork.c  test-cut-gassertions-helper.c  test-cut-gassertions.c  test-cut-iterated-test.c  test-cut-loader-suite.c  test-cut-loader.c  test-cut-log.c  test-cut-main.c  test-cut-metadata.c  test-cut-module-factory.c  test-cut-module.c  test-cut-path.c  test-cut-pipeline.c  test-cut-process.c  test-cut-report-xml.c  test-cut-repository.c  test-cut-run-context.c  test-cut-runner.c  test-cut-sequence-matcher.c  test-cut-stream-parser.c  test-cut-sub-process-group.c  test-cut-sub-process.c  test-cut-test-attribute.c  test-cut-test-case.c  test-cut-test-context.c  (+31 more)
vcc/: Makefile.am  Makefile.build  Makefile.objects.cppcutter  Makefile.objects.cutter  Makefile.objects.gcutter  Makefile.sub  Makefile.test-cutter  Makefile.test.cutter  Makefile.test.fixtures.factory.type1  Makefile.test.fixtures.factory.type2  Makefile.test.fixtures.loader.attribute  Makefile.test.fixtures.loader.cpp  Makefile.test.fixtures.loader.cpp-fixture  Makefile.test.fixtures.loader.fixture  Makefile.test.fixtures.loader.iterator  Makefile.test.fixtures.loader.module  Makefile.test.fixtures.loader.suite  Makefile.test.fixtures.loader.test  Makefile.test.fixtures.path.parent.sub  Makefile.test.fixtures.pipeline.error  Makefile.test.fixtures.pipeline.failure  Makefile.test.fixtures.pipeline.omission  Makefile.test.fixtures.pipeline.pending  Makefile.test.fixtures.pipeline.setup-error  Makefile.test.fixtures.pipeline.success  Makefile.test.fixtures.repository  Makefile.test.fixtures.sub-process  cutter.sln  (+12 more)
(+682 files in other folders)
